# cxx_template

./: CMakeLists.txt  README.md  Untitled.ipynb  pyproject.toml  setup.py  test.py
test/: CMakeLists.txt  test.cpp
